app/assets/stylesheets/_sidebar.css.sass
@import compass/typography/lists/inline-block-list
@import compass/utilities/text/replacement

.users.show
  #side-bar
    background: #efeeed
    border-right: solid 1px #CCC
  .user-vcard
    background: #efeeed
    .info
      h2
        color: #666666
        text-shadow: 0px 0px 0px
      h2.actor_name
    .container
      padding: 10px
      background-image: none
    .blurb
      color: #a5a4a5
      font-size: 14px

#side-bar
  .count
    a
      font-size: 13px
      padding-left: 7px
    span
      text-shadow: 0px -1px 0px #000

  .widget
    padding: 14px 13px

#footer
  background-color: #516c88
  clear: both
  color: #b7d5ea
  padding: 5px
  font-size: 10px

  li
    float: left
    margin-right: 10px

.home, .follow
  & > #side-bar-wrap
    .points-container
      border-bottom: none
      .label
        color: #fff
      .v-divider
        color: #A9D1F2

.right .user-vcard, .login-box
  border-radius: 0 7px 0 0
  box-shadow: inset 0px 1px 1px rgba(255,255,255,0.2)
.left .user-vcard
  border-radius: 7px 0 0 0

.user-follows-count
  height: 31px
  position: relative
  background: #516c8a url(/css/images/noise2.png) repeat 0 0
  padding: 15px 0 0 10px
  .shadow
    position: absolute
    top: 0
    left: 0
    height: 20px
    width: 100%
    background: url(/css/images/follow-count-shadow.png) no-repeat 0 0
  .count
    color: #34c3f2
    font-size: 14px
    margin-right: 10px
    strong
      font-weight: normal
      color: #fff
      font-size: 16px
      text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5)
      margin-right: 5px
  .corner
    position: absolute
    bottom: 0
    right: 0
    background: url(/css/images/ufollows-corner.png) no-repeat 0 0
    width: 16px
    height: 16px

.viewmore-btn
  display: block
  width: 274px
  height: 28px
  background: #516c88
  text-align: center
  line-height: 28px
  color: #a9d1f2
  margin: 0 auto 1em
  border-radius: 8px
  &:hover
    text-decoration: none
    background: #33b9e5
    color: #fff

.splashers-widgets
  background: #b7d5ea url(/css/images/sidewidgets-bg.png) repeat-x 0 bottom
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3) inset
  padding-bottom: 5px

.suggested-splashers
  margin-top: -10px

  h3
    font-size: 14px
    color: #586d80
    font-weight: normal
    padding: 16px 0 0 13px
  .see-all
    color: #262626
    font-size: 10px
    margin: 20px 13px 0 0
    span
      position: relative
      top: -1px
  ul
    list-style: none outside none
    padding: 9px 0
    min-height: 0
    max-height: 219px
    overflow: hidden
  li
    background: url(/css/images/suggested-splashers-divider.png) no-repeat center bottom
    padding-bottom: 3px
    height: 73px
  li:last-of-type
    background: none
  .wrap
    padding: 9px 13px
    position: relative
    overflow: hidden
  .avatar
    width: 45px
    height: 45px
    box-shadow: 0 0 1px rgba(255, 255, 255, 0.75), 0 0 1px rgba(0, 0, 0, 0.75) inset
  .info
    padding-left: 8px
  .names
    a
      color: #252525
      font-size: 14px
    small
      font-size: 10px
      color: #788d99
  .scores
    color: #5092cc
    font-size: 27px
    line-height: 1
    height: 27px
  .delete
    position: absolute
    right: 13px
    width: 18px
    height: 18px
    background: url(/css/images/ico-delete-suggestsplasher.png) no-repeat 0 0
    display: none
  .follow
    position: absolute
    right: 39px
    color: #5092cc
    font-size: 10px
    line-height: 18px
    display: none
  .follow, .delete
    top: 25px
  li:hover
    .wrap
      background: #b8daf4 url(/css/images/suggested-splashers-h.png) repeat-x 0 bottom
      box-shadow: 0 0 3px rgba(0, 0, 0, 0.12)
    .delete, .follow
      display: block

#side-bar-wrap
  width: 300px
  position: relative

  &.right
    padding: 8px 8px 8px 0
  &.left
    padding: 8px 0 8px 8px

  #footer
    padding: 5px 10px

#side-bar
  box-shadow: 0 0 8px rgba(0, 0, 0, 1)
.right #side-bar
  border-radius: 0 7px 7px 0
.left #side-bar
  border-radius: 7px 0 0 7px

.user-vcard, .login-box, .in-the-press
  h2
    @extend .avan-bold
    font-size: 24px
    font-weight: normal
    color: #fff
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5)
    min-height: 62px

.user-vcard, .login-box
  background: #6384a4 url(/css/images/profile-vcard-bg.png) repeat-x 0 bottom
  .container
    background: url(/css/images/noise2.png) repeat 0 0
    padding: 10px
  .picture
    width: 125px
    height: 185px
    border: solid 1px #6b7d91
    .upload-avatar-link
      display: none
      margin-top: -18px
  .picture:hover
    .upload-avatar-link
      display: block
  .info
    width: 140px
    padding: 0px 0 0 10px
    margin-top: -6px
  .score
    height: 73px
    position: relative
    margin: 5px 0 0 2px
    img
      float: left
      margin-left: 3px
    .badge
      position: absolute
      top: -4px
      left: -10px
      width: 25px
      height: 24px
      background: url(/css/images/spscore-badge.png) no-repeat 0 0
      z-index: 999
      display: none
    .expand
      position: absolute
      top: 52px
      right: 5px
      background: url(/css/images/btn-expand.png) no-repeat 0 0
      width: 20px
      height: 30px
      cursor: normal
      .tip
        display: none
    .expand:hover
      text-decoration: none
      .tip
        display: block
        position: absolute
        width: 200px
        left: -182px
        top: 25px
        background: transparent url(/css/images/head-search-dd.png) repeat-x 0 0
        z-index: 99
        padding: 10px
        border-radius: 5px
        font-size: 11px
        line-height: 15px
        .contents
          background-color: #E4EFF7
          display: block
          padding: 5px 10px
          color: #252525
          border-radius: 5px
        .top
          width: 12px
          height: 12px
          background: url(/css/images/head-search-arrow.png) no-repeat 0 0
          position: absolute
          top: -12px
          right: 6px
  .blurb
    width: 140px
    color: #fff
    font-size: 14px
    font-family: georgia
    font-style: italic
    padding-top: 6px
    a
      color: #12b2e6
    input
      background: none
      border: 1px solid #12b2e6
      width: 130px
      padding: 3px 5px
      height: 15px

.tag-line.edit
  textarea
    border: 0px
    height: 25px
    padding: 3px
    color: #666
  button
    margin-right: 5px

#side-bar
  .user-follows
    ul:first-child
      margin: 10px 10px 20px 10px
      border-bottom: solid 2px #CCC
      box-shadow: 0px 1px 0px #FFF
      padding-bottom: 10px
      .following-count
        .active_underline
          left: -11px
      li
        display: inline-block
        position: relative
      .ui-state-active
        a
          color: #586d80
        .active_underline
          height: 5px
          position: absolute
          width: 75px
          background-color: #516C88
          bottom: -17px
      a
        color: #a4aeb8
      .relationship-count
        font-size: 24px
        margin-bottom: -2px
      .relationship-label
        font-size: 14px
        font-family: 'ITCAvantGardeGothicBookRg', arial, sans-serif
      .v-space
        margin: 0px 10px
        height: 50px
        border-left: solid 1px #C2C0C0
        display: inline-block
        position: relative
        top: 10px
        margin-top: -10px
  .contact-sep-shadow
    position: relative
    width: 100%
    height: 20px
    background: url("/css/images/vCardshadow.png") no-repeat 0px 0px
    margin-top: -10px
  .points-container
    margin: 0px 10px
    border-bottom: solid 2px #d4d2d3
    box-shadow: 0px 1px 0px #FFF
    .ripples
      position: absolute
      left: 155px
    .number
      color: #34c3f2
      font-size: 24px
      position: relative
      top: -4px
      display: inline-block
      .outer
        color: #3883a8
        position: relative
      .inner
        position: absolute
        top: 0px
        overflow: hidden
        height: 15px
        height: 19px
        color: #34C3F2
    .label
      font-size: 12px
      color: #666666
      top: -13px
      position: relative
      .outer
        color: #3883a8
        position: relative
      .inner
        position: absolute
        top: 0px
        overflow: hidden
        height: 19px
        color: #34C3F2
    .v-divider
      display: inline-block
      border-left: solid 1px #c2c0c0
      position: relative
      height: 28px
      margin: 0px 5px

.user-vcard
  .score-text
    text-transform: uppercase
    font-size: 10px
    color: #666
    text-shadow: 0px -1px 0px #FFF
    display: block
    margin-left: 20px
    margin-top: 5px
    letter-spacing: 2px

.home.index , .follow
  .user-vcard
    .score-text
      color: white
      text-shadow: 0px -1px 0px black

.login-box
  .container
    @extend .widget

  h2
    margin-bottom: 30px

  p
    margin: 0

    &.fb a
      width: 196px

  p.fb a, p.other a
    margin: 0 auto

  p.other
    margin: -20px 0 30px
    font-size: 10px
    text-align: right
    padding-right: 15px

    a
      display: block
      text-align: right
      width: 239px

div.social-buttons
  @extend .widget
  background: #b7d5ea
  margin-top: -10px

  .fb-like
    margin: 7px 0 0 -1px

  .twitter-follow-button
    margin: -2px 0 0 -1px

ul.social-like-buttons
  +inline-block-list
  float: right
  margin-bottom: 20px

  li
    padding: 5px
    &.facebook
      margin: -3px 0 0 0

.in-the-press
  @extend .widget
  background: #efeeed
  color: #586d80

  h2
    clear: both
    color: #666
    line-height: 24px
    min-height: 0
    overflow: none
    text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.5)

  blockquote
    margin-top: 15px
    clear: both
    overflow: auto

  p.author
    margin-top: 5px
    a, span
      display: block
      float: right

  .rm a
    +replace-text-with-dimensions("rhythm-mobile-logo.png")

  .tc a
    +replace-text-with-dimensions("techcrunch_logo.png")

  .bb
    margin-top: 20px
    padding: 3px

    span
      +replace-text-with-dimensions("billboard-logo.png")

